2022-03-16  Myles C. Maxfield  <mmaxfield@apple.com>

        [WebGPU] Use the fromAPI() pattern
        https://bugs.webkit.org/show_bug.cgi?id=237942

        Reviewed by Kimmo Kinnunen.

        Inside API functions, use an overloaded fromAPI() function to convert
        API types to their backing types.

        * WebGPU.xcodeproj/project.pbxproj:
        * WebGPU/APIConversions.h: Added.
        (WebGPU::fromAPI):
        * WebGPU/Adapter.h:
        * WebGPU/Adapter.mm:
        (WebGPU::Adapter::requestDevice):
        (wgpuAdapterEnumerateFeatures):
        (wgpuAdapterGetLimits):
        (wgpuAdapterGetProperties):
        (wgpuAdapterHasFeature):
        (wgpuAdapterRequestDevice):
        (wgpuAdapterRequestDeviceWithBlock):
        * WebGPU/BindGroup.h:
        * WebGPU/BindGroup.mm:
        (WebGPU::Device::createBindGroup):
        (WebGPU::BindGroup::setLabel):
        (wgpuBindGroupSetLabel):
        * WebGPU/BindGroupLayout.h:
        * WebGPU/BindGroupLayout.mm:
        (WebGPU::BindGroupLayout::setLabel):
        (wgpuBindGroupLayoutSetLabel):
        * WebGPU/Buffer.h:
        * WebGPU/Buffer.mm:
        (WebGPU::Buffer::setLabel):
        (wgpuBufferDestroy):
        (wgpuBufferGetConstMappedRange):
        (wgpuBufferGetMappedRange):
        (wgpuBufferMapAsync):
        (wgpuBufferMapAsyncWithBlock):
        (wgpuBufferUnmap):
        (wgpuBufferSetLabel):
        * WebGPU/CommandBuffer.h:
        * WebGPU/CommandBuffer.mm:
        (WebGPU::CommandBuffer::setLabel):
        (wgpuCommandBufferSetLabel):
        * WebGPU/CommandEncoder.h:
        * WebGPU/CommandEncoder.mm:
        (WebGPU::CommandEncoder::insertDebugMarker):
        (WebGPU::CommandEncoder::pushDebugGroup):
        (WebGPU::CommandEncoder::setLabel):
        (wgpuCommandEncoderBeginComputePass):
        (wgpuCommandEncoderBeginRenderPass):
        (wgpuCommandEncoderCopyBufferToBuffer):
        (wgpuCommandEncoderCopyBufferToTexture):